syntax = "proto3";
package pulse.engine.bind;
option java_package = "com.kitware.pulse.engine.bind";
option csharp_namespace = "pulse.engine.bind";
option optimize_for = SPEED;

enum eModelType
{
  HumanAdultWholeBody            = 0;
  HumanAdultVentilationMechanics = 1;
}

enum eAirwayMode
{
  Free                                                               = 0;/**<<@brief Nothing hooked up to the patient airway */
  AnesthesiaMachine                                                  = 1;/**<<@brief Hooked up to this equipment */
  BagValveMask                                                       = 2;/**<<@brief Hooked up to this equipment */
  Inhaler                                                            = 3;/**<<@brief Hooked up to this equipment */
  MechanicalVentilation                                              = 4;/**<<@brief Physical ventilation being performed */
  MechanicalVentilator                                               = 5;/**<<@brief Hooked up to this equipment */
  NasalCannula                                                       = 6;/**<<@brief Hooked up to this equipment */
  NonRebreatherMask                                                  = 7;/**<<@brief Hooked up to this equipment */
  SimpleMask                                                         = 8;/**<<@brief Hooked up to this equipment */
}
